--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:theme="@style/Theme.KoshkarovaLaba1"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityNavigation"
+            android:exported="false"
+            android:label="@string/title_activity_navigation" />
+        <activity
+            android:name=".Activity4_"
+            android:exported="false"
+            android:label="@string/title_activity_4" />
+        <activity
             android:name=".Activity4"
             android:exported="false" />
         <activity
